--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.5.0",
+        "mdb-ui-kit": "^3.9.0"
     }
 }
